--- a/index.html
+++ b/index.html
@@ -2,22 +2,18 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>title</title>
-<link href="css/reset.css" rel="stylesheet" type="text/css">
-<link href="css/css.css" rel="stylesheet" type="text/css">
+<title>Learning JavaScript</title>
+<script src="./build/bundle.js"></script>
 </head>
 
 <body>
 <header>
-    <h1>hello</h1>
+    <h1>Learning JavaScript</h1>
 </header>
 <section>
   <article>
-    <span class="date">ここに日付</span>
-    <h2>ここにタイトル</h2>
-    <p>
-     ここにテキスト
-    </p>
+    <h2>8章 関数</h2>
+    <p>ここにテキスト</p>
   </article>
 </section>
 <footer>
